# ImageProcessor

./: CMakeLists.txt  README.md  check_app.sh  deploy.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
avatarhat/: avatarhatwidget.cpp  avatarhatwidget.h
cocosatlas/: cocosatlaswidget.cpp  cocosatlaswidget.h
resources/: AppIcon.icns  make_icns.sh  resources.qrc
splitmerge/: splitmergewidget.cpp  splitmergewidget.h
styleconvert/: styleconvertwidget.cpp  styleconvertwidget.h
